Recent edits with preloader update and patient brochure

--- a/ar/download-brochure.html
+++ b/ar/download-brochure.html
@@ -145,7 +145,7 @@
         <div class="pt-4 pb-3 pt-md-5 pb-md-4">
           <h2 class="text-uppercase">قم بتنزيــــــل <br><strong class="text-animate">كتيــــب المريـــض</strong><br>لمعرفـــــة المزيــــــد<br>عن فـــــــرط التعـــــــرّق</h2>
         </div>
-        <a class="btn btn-lg px-4 btn-dark fw-bold fs-2" href="assets/pdf/bts-brochure.pdf" target="_blank">تحميـــــــــل</a>
+        <a class="btn btn-lg px-4 btn-dark fw-bold fs-2" href="assets/pdf/BTS-Patient-Brochure-ar.pdf" target="_blank">تحميـــــــــل</a>
       </div>
     </div>
   </div>
@@ -201,6 +201,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=5899" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=2.102" charset="utf-8"></script>
 </body>
 </html>
