--- a/ar/how-to-treat.html
+++ b/ar/how-to-treat.html
@@ -148,7 +148,7 @@
 
           <div class="row d-flex justify-content-center align-items-center pt-3 pb-4">
             <div class="col-10">
-              <img class="w-100" src="assets/img/banners/disease-mild.svg" alt="disease mild">
+              <img class="w-100" src="assets/img/banners/lines-mild.gif?v=1.2" alt="disease mild">
             </div>
           </div>
           <div class="px-lg-2">
@@ -165,7 +165,7 @@
 
           <div class="row d-flex justify-content-center align-items-center pt-3 pb-4">
             <div class="col-10">
-              <img class="w-100" src="assets/img/banners/disease-severe.svg" alt="disease severe">
+              <img class="w-100" src="assets/img/banners/lines-severe.gif?v=1.2" alt="disease severe">
             </div>
           </div>
           <div class="px-lg-2">
@@ -273,6 +273,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=16527" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=2.102" charset="utf-8"></script>
 </body>
 </html>
