--- a/en/faqs.html
+++ b/en/faqs.html
@@ -23,7 +23,7 @@
 <header class="bg-secondary">
 
 </header>
-<nav id="mainNavbar" class="topbar py-3">
+<nav id="mainNavbar" class="topbar menu-bg-level-2 py-3">
   <div class="container-fluid container-xl position-relative">
     <div class="row d-flex justify-content-center align-items-center">
       <div class="col-3 col-lg-2">
