--- a/en/causes.html
+++ b/en/causes.html
@@ -15,7 +15,7 @@
 
     <title>BEAT THE SWEAT - Causes</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="assets/css/custom.css?v=2.102"/>
   </head>
   <body>
@@ -24,16 +24,19 @@
 
 </header>
 <nav id="mainNavbar" class="topbar py-3">
-  <div class="container-fluid container-xl position-relative">
+  <div class="container-fluid position-relative">
     <div class="row d-flex justify-content-center align-items-center">
       <div class="col-3 col-lg-2">
         <a class="navbar-brand" href="en">
           <img src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
-      <div class="col-4 col-lg-8">
+      <div class="col-4 col-lg-8 col-xxl-6 offset-xxl-2 mx-lg-auto">
         <div class="main-menu">
-          <ul class="nav flex-column flex-lg-row position-relative justify-content-start align-items-start align-items-lg-center py-2">
+          <ul class="nav flex-column flex-lg-row position-relative justify-content-start justify-content-xxl-around align-items-start align-items-lg-center py-2">
+            <li class="nav-item mb-2 mb-lg-0 position-relative d-lg-none">
+              <a class="nav-link js-scroll-trigger py-1 hover-line" href="en/">HOME</a>
+            </li>
             <li class="nav-item mb-2 mb-lg-0 position-relative">
               <a class="nav-link js-scroll-trigger py-1 btn btn-outline-secondary active" href="en/hyperhidrosis-facts">HYPERHIDROSIS FACTS</a>
               <ul class="mega-menu">
@@ -130,7 +133,7 @@
                       <p class="mb-1">It is difficult to say how many people have excessive sweating. Many people never see a doctor. Some are too embarrassed to talk with a doctor. Others do not realize that this is a treatable medical condition. Researchers have learned that most people have one of the following:</p>
 
           <div class="row d-flex justify-content-center align-items-start pt-3">
-                          <div class="col-6 col-md-3 col-lg-4 col-xl-4 col-xxl-4 d-flex justify-content-center lh-1 align-items-center flex-column pb-3">
+                          <div class="col-10 col-md-3 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center lh-1 align-items-center flex-column pb-3">
                 <div class="causes-rounded-block shadow fw-bold fs-7 ">
                   <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
                     <img class="h-25" src="assets/img/icon/causes/icon-1.svg" alt="Icon">
@@ -141,7 +144,7 @@
                   Certain medications – including some antidepressants, propranolol, pilocarpine, and bethanechol, can cause excessive sweating.<sup>1,2</sup>
                 </div>
               </div>
-                          <div class="col-6 col-md-3 col-lg-4 col-xl-4 col-xxl-4 d-flex justify-content-center lh-1 align-items-center flex-column pb-3">
+                          <div class="col-10 col-md-3 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center lh-1 align-items-center flex-column pb-3">
                 <div class="causes-rounded-block shadow fw-bold fs-7 block-light">
                   <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
                     <img class="h-25" src="assets/img/icon/causes/icon-2.svg" alt="Icon">
@@ -152,7 +155,7 @@
                   Many medical conditions can cause excessive sweating. These include diabetes and gout.<br>A tumour or injury also can cause excessive sweating.<br>Women often sweat excessively when they get hot flashes during menopause. The cause is obvious. Some women, however, develop excessive sweating after they have gone through menopause. This sweating does not have an obvious cause.<sup>1,2</sup>
                 </div>
               </div>
-                          <div class="col-6 col-md-3 col-lg-4 col-xl-4 col-xxl-4 d-flex justify-content-center lh-1 align-items-center flex-column pb-3">
+                          <div class="col-10 col-md-3 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center lh-1 align-items-center flex-column pb-3">
                 <div class="causes-rounded-block shadow fw-bold fs-7 ">
                   <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
                     <img class="h-25" src="assets/img/icon/causes/icon-3.svg" alt="Icon">
@@ -173,9 +176,6 @@
     </div>
   </div>
 </div>
-<div class="d-flex d-lg-none">
-  <img class="w-100" src="assets/img/banners/causes-section.png" alt="BEAT THE SWEAT">
-</div>
   </section>
   <section class="bg-white py-0 position-relative reference-bg">
     <div class="container-fluid">
@@ -187,11 +187,11 @@
           <div class="accordion accordion-flush">
             <div class="accordion-item mb-1 border-0">
               <div class="accordion-header">
-                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="true" aria-controls="flush-collapse0">
                   REFERENCES:
                 </button>
               </div>
-              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+              <div id="flush-collapse0" class="accordion-collapse collapse show" data-bs-parent="#accordionFlushFaqs">
                 <div class="accordion-body">
                   <ol class="font-en">
                     <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-causes" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-causes</a> last accessed (May 2023)</li>
@@ -221,7 +221,7 @@
 </main>
 
 <footer class="position-relative pt-5 pb-2">
-  <div class="container-fluid container-md position-relative">
+  <div class="container-fluid position-relative">
 
     <div class="row d-flex align-items-center justify-content-between">
       <div class="col-md-4 pb-5 pb-md-0">
@@ -230,7 +230,7 @@
         </a>
       </div>
 
-      <div class="col-md-4 pb-5 pb-md-0">
+      <div class="col-md-4 pb-5 pb-md-0 text-md-center">
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
         </ul>
@@ -265,8 +265,8 @@
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
 <script src="assets/js/custom.js?v=2.102" charset="utf-8"></script>
 </body>
 </html>
