--- a/ar/download-brochure.html
+++ b/ar/download-brochure.html
@@ -15,7 +15,7 @@
 
     <title>BEAT THE SWEAT - Download Brochure</title>
               <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css"/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="assets/css/custom.css?v=2.102"/>
   </head>
   <body>
@@ -24,16 +24,19 @@
 
 </header>
 <nav id="mainNavbar" class="topbar menu-bg-level-2 py-3">
-  <div class="container-fluid container-xl position-relative">
+  <div class="container-fluid position-relative">
     <div class="row d-flex justify-content-center align-items-center">
       <div class="col-3 col-lg-2">
         <a class="navbar-brand" href="ar">
           <img src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
-      <div class="col-4 col-lg-8">
+      <div class="col-4 col-lg-8 col-xxl-6 offset-xxl-2 mx-lg-auto">
         <div class="main-menu">
-          <ul class="nav flex-column flex-lg-row position-relative justify-content-start align-items-start align-items-lg-center py-2">
+          <ul class="nav flex-column flex-lg-row position-relative justify-content-start justify-content-xxl-around align-items-start align-items-lg-center py-2">
+            <li class="nav-item mb-2 mb-lg-0 position-relative d-lg-none">
+              <a class="nav-link js-scroll-trigger py-1 hover-line" href="ar/">الصفحــــــة<br>الرئيســـــية</a>
+            </li>
             <li class="nav-item mb-2 mb-lg-0 position-relative">
               <a class="nav-link js-scroll-trigger py-1" href="ar/hyperhidrosis-facts">حقائــق عـن<br>التعرق الزائد</a>
               <ul class="mega-menu">
@@ -120,10 +123,10 @@
     <div class="container-fluid container-xl">
   <div class="row d-flex align-items-center">
     <div class="col-xl-8 pb-4 pb-xl-0 text-center">
-      <p class="pb-2">تغلب على العرق" هي حملة توعية تهدف إلى زيادة الوعي حول مرض فرط التعرّق الإبطي ودعم المرضى الذين يعانون منه.<br>برعاية Allergan Aesthetics إحدى شركات AbbVie</p>
+      <p class="pb-2">"تغلب على العرق" هي حملة توعية تهدف إلى زيادة الوعي حول مرض فرط التعرّق الإبطي ودعم المرضى الذين يعانون منه.<br>برعاية Allergan Aesthetics إحدى شركات AbbVie</p>
       <div class="video-block position-relative">
         <video preload="metadata" class="w-100" id="teaser_video" playsinline autoplay muted loop>
-      		<source src="https://storage.googleapis.com/vinith/assets/m/v/bts/bts.mp4" type="video/mp4">
+      		<source src="assets/video/bts-ar.mp4" type="video/mp4">
       	</video>
 
         <div id="videoPlayPause" class="control-icons">
@@ -155,28 +158,28 @@
 </main>
 
 <footer class="position-relative pt-5 pb-2">
-  <div class="container-fluid container-md position-relative">
+  <div class="container-fluid position-relative">
 
     <div class="row d-flex align-items-center justify-content-between">
-      <div class="col-md-4 pb-5 pb-md-0">
+      <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
         <a href="https://www.allerganaesthetics.com/" target="_blank">
           <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
 
-      <div class="col-md-4 pb-5 pb-md-0">
+      <div class="col-md-4 pb-5 pb-md-0 order-md-2 text-md-center">
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
-      <div class="col-md-4 text-md-end">
+      <div class="col-md-4 text-md-start order-md-1">
         <a href="ar">
           <img class="tagline-logo" src="assets/img/logo/logo-bts-ar-w.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
 
-      <div class="col-12 pt-5">
+      <div class="col-12 pt-5 order-md-4">
         <div class="d-flex align-items-center pb-2">
           <span class="text-white">تابعنا:</span>
           <ul class="list-unstyled d-flex social-navbar mb-0">
@@ -199,8 +202,8 @@
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
 <script src="assets/js/custom.js?v=2.102" charset="utf-8"></script>
 </body>
 </html>
