--- a/ar/index.html
+++ b/ar/index.html
@@ -15,7 +15,7 @@
 
     <title>BEAT THE SWEAT - Don't Crop Treat</title>
               <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css"/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="assets/css/custom.css?v=2.102"/>
   </head>
   <body>
@@ -24,16 +24,41 @@
 
 </header>
 <nav id="mainNavbar" class="topbar py-3">
-  <div class="container-fluid container-xl position-relative">
-    <div class="row d-flex justify-content-center align-items-center">
-      <div class="col-3 col-lg-2">
-        <a class="navbar-brand" href="ar">
-          <img src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
-        </a>
+  <div class="container-fluid position-relative">
+    <div class="row d-flex justify-content-between align-items-center">
+      <div class="col-4 d-lg-none">
+        <div class="menu-icon">
+
+        </div>
       </div>
-      <div class="col-4 col-lg-8">
+      <div class="d-none d-lg-flex align-items-end justify-content-end justify-content-lg-start col-2 col-lg-3 col-xxl-2">
+
+        <ul class="list-unstyled d-flex social-navbar mb-0">
+          <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
+          <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
+          <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
+          <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
+          <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
+        </ul>
+
+        <div class="language-switcher ps-3">
+          <div class="d-flex align-items-center justify-content-center">
+            <div class="">
+              <img src="assets/img/icon/web.svg" alt="Language Icon">
+            </div>
+            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en">EN</a>
+            <span class="d-inline-block lang-divider"></span>
+            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-4 col-lg-7 col-xxl-6 offset-xxl-2 mx-lg-auto">
         <div class="main-menu">
-          <ul class="nav flex-column flex-lg-row position-relative justify-content-start align-items-start align-items-lg-center py-2">
+          <ul class="nav flex-column flex-lg-row position-relative justify-content-start justify-content-xxl-around align-items-start align-items-lg-center py-2">
+            <li class="nav-item mb-2 mb-lg-0 position-relative d-lg-none">
+              <a class="nav-link js-scroll-trigger py-1 btn btn-outline-secondary active" href="en/">الصفحــــــة<br>الرئيســـــية</a>
+            </li>
             <li class="nav-item mb-2 mb-lg-0 position-relative">
               <a class="nav-link js-scroll-trigger py-1" href="ar/hyperhidrosis-facts">حقائــق عـن<br>التعرق الزائد</a>
               <ul class="mega-menu">
@@ -82,32 +107,10 @@
           </div>
         </div>
       </div>
-      <div class="d-none d-lg-flex align-items-end justify-content-end col-2">
-
-        <ul class="list-unstyled d-flex social-navbar mb-0">
-          <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
-          <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
-          <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
-          <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
-          <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
-        </ul>
-
-        <div class="language-switcher ps-3">
-          <div class="d-flex align-items-center justify-content-center">
-            <div class="">
-              <img src="assets/img/icon/web.svg" alt="Language Icon">
-            </div>
-            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en">EN</a>
-            <span class="d-inline-block lang-divider"></span>
-            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
-          </div>
-        </div>
-
-      </div>
-      <div class="col-4 d-lg-none">
-        <div class="menu-icon">
-
-        </div>
+      <div class="col-3 col-lg-2 text-end">
+        <a class="navbar-brand" href="ar">
+          <img src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
+        </a>
       </div>
     </div>
   </div>
@@ -204,7 +207,7 @@
         <div class="col-10">
           <div class="percentage-block">
             <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
+            <div class="percentage-value h1">
               <span class="text-animate">٦٥٪</span>
             </div>
           </div>
@@ -219,7 +222,7 @@
         <div class="col-10">
           <div class="percentage-block">
             <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
+            <div class="percentage-value h1">
               <span class="text-animate">٣٪</span>
             </div>
           </div>
@@ -286,11 +289,11 @@
           <div class="accordion accordion-flush">
             <div class="accordion-item mb-1 border-0">
               <div class="accordion-header">
-                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="true" aria-controls="flush-collapse0">
                   مراجع:
                 </button>
               </div>
-              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+              <div id="flush-collapse0" class="accordion-collapse collapse show" data-bs-parent="#accordionFlushFaqs">
                 <div class="accordion-body">
                   <ol class="font-en">
                     <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
@@ -321,28 +324,28 @@
 </main>
 
 <footer class="position-relative pt-5 pb-2">
-  <div class="container-fluid container-md position-relative">
+  <div class="container-fluid position-relative">
 
     <div class="row d-flex align-items-center justify-content-between">
-      <div class="col-md-4 pb-5 pb-md-0">
+      <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
         <a href="https://www.allerganaesthetics.com/" target="_blank">
           <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
 
-      <div class="col-md-4 pb-5 pb-md-0">
+      <div class="col-md-4 pb-5 pb-md-0 order-md-2 text-md-center">
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
-      <div class="col-md-4 text-md-end">
+      <div class="col-md-4 text-md-start order-md-1">
         <a href="ar">
           <img class="tagline-logo" src="assets/img/logo/logo-bts-ar-w.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
 
-      <div class="col-12 pt-5">
+      <div class="col-12 pt-5 order-md-4">
         <div class="d-flex align-items-center pb-2">
           <span class="text-white">تابعنا:</span>
           <ul class="list-unstyled d-flex social-navbar mb-0">
@@ -367,8 +370,8 @@
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
 <script src="assets/js/custom.js?v=2.102" charset="utf-8"></script>
 </body>
 </html>
