--- a/ar/lifestyle-tips.html
+++ b/ar/lifestyle-tips.html
@@ -15,7 +15,7 @@
 
     <title>BEAT THE SWEAT - Lifestyle Tips</title>
               <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css"/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="assets/css/custom.css?v=2.102"/>
   </head>
   <body>
@@ -24,16 +24,19 @@
 
 </header>
 <nav id="mainNavbar" class="topbar menu-bg-level-1 py-3">
-  <div class="container-fluid container-xl position-relative">
+  <div class="container-fluid position-relative">
     <div class="row d-flex justify-content-center align-items-center">
       <div class="col-3 col-lg-2">
         <a class="navbar-brand" href="ar">
           <img src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
-      <div class="col-4 col-lg-8">
+      <div class="col-4 col-lg-8 col-xxl-6 offset-xxl-2 mx-lg-auto">
         <div class="main-menu">
-          <ul class="nav flex-column flex-lg-row position-relative justify-content-start align-items-start align-items-lg-center py-2">
+          <ul class="nav flex-column flex-lg-row position-relative justify-content-start justify-content-xxl-around align-items-start align-items-lg-center py-2">
+            <li class="nav-item mb-2 mb-lg-0 position-relative d-lg-none">
+              <a class="nav-link js-scroll-trigger py-1 hover-line" href="ar/">الصفحــــــة<br>الرئيســـــية</a>
+            </li>
             <li class="nav-item mb-2 mb-lg-0 position-relative">
               <a class="nav-link js-scroll-trigger py-1" href="ar/hyperhidrosis-facts">حقائــق عـن<br>التعرق الزائد</a>
               <ul class="mega-menu">
@@ -138,10 +141,10 @@
     <div class="container-fluid">
   <div class="row d-flex justify-content-center align-items-center">
     <div class="col-xl-10 col-12 py-5">
-      <div class="row d-flex justify-content-center align-items-start">
-        <div class="col-lg-6">
+      <div class="row d-flex justify-content-center align-items-start py-lg-5 my-lg-5">
+        <div class="col-lg-6 py-lg-3">
           <div class="row d-flex justify-content-center align-items-start">
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="d-flex justify-content-center">
                 <h1 class="h2 fw-bold display-6 text-animate pb-2">افعل</h1>
                 <span class="fw-bold">1</span>
@@ -150,7 +153,7 @@
                 <img height="160" src="assets/img/icon/lifestyle/do.svg" alt="lifestyle dos">
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-md-8 pt-3 pt-md-0">
 
                               <ul class="custom-icon-list list-icon-2 pt-lg-3">
                   <li>ارتد ملابس فضفاضة لتقليل علامات التعرق.</li>
@@ -163,7 +166,7 @@
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0">
           <div class="row d-flex justify-content-center align-items-start">
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="d-flex justify-content-center">
                 <h1 class="h2 fw-bold display-6 text-animate pb-2">لا تفعل</h1>
                 <span class="fw-bold">1</span>
@@ -172,7 +175,7 @@
                 <img height="160" src="assets/img/icon/lifestyle/dont.svg" alt="lifestyle donts">
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-md-8 pt-3 pt-md-0">
 
                               <ul class="custom-icon-list list-icon-2 pt-lg-3">
                   <li>لا ترتدي ملابس ضيقة أو أقمشة اصطناعية - على سبيل المثال، النايلون.</li>
@@ -207,14 +210,13 @@
     <div class="col-xl-10 col-12 pt-3">
       <div class="row">
         <div class="col-lg-12 pb-5">
-
-                      <p class="fs-4 mb-2 fw-bold">تقنية الإحلال الأيوني<sup>2</sup></p>
+          <p class="fs-4 mb-2 fw-bold">Iontophoresis.<sup>2</sup></p>
             <p>باستخدام هذا العلاج المنزلي، يمكنك نقع يديك أو قدميك في وعاء من الماء بينما يمرر الجهاز تيارًا كهربائيًا خفيفًا عبر الماء. التيار يسد الأعصاب التي تسبب التعرق. يمكنك شراء الجهاز إذا كان لديك وصفة طبية من الطبيب الخاص بك.</p>
             <p>ستحتاج إلى نقع المناطق المصابة لمدة ٢٠ إلى ٤٠ دقيقة استخدم الجهاز حسب نصيحة طبيبك المعالج.<sup>1</sup></p>
 
           <div class="row d-flex justify-content-center align-items-center py-3 py-md-4">
             <div class="col-xxl-6 col-xl-8 col-lg-8 col-md-9 col-sm-10">
-              <img width="w-100" src="assets/img/banners/home-remedies-animate-v1.svg" alt="home remedies">
+              <img width="w-100" src="assets/img/banners/home-remedies-animate-v1-ar.svg" alt="home remedies">
             </div>
           </div>
         </div>
@@ -233,11 +235,11 @@
           <div class="accordion accordion-flush">
             <div class="accordion-item mb-1 border-0">
               <div class="accordion-header">
-                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="true" aria-controls="flush-collapse0">
                   مراجع:
                 </button>
               </div>
-              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+              <div id="flush-collapse0" class="accordion-collapse collapse show" data-bs-parent="#accordionFlushFaqs">
                 <div class="accordion-body">
                   <ol class="font-en">
                     <li><a class="text-dark" href="https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/" target="_blank">https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/</a> last accessed May 23.</li>
@@ -267,28 +269,28 @@
 </main>
 
 <footer class="position-relative pt-5 pb-2">
-  <div class="container-fluid container-md position-relative">
+  <div class="container-fluid position-relative">
 
     <div class="row d-flex align-items-center justify-content-between">
-      <div class="col-md-4 pb-5 pb-md-0">
+      <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
         <a href="https://www.allerganaesthetics.com/" target="_blank">
           <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
 
-      <div class="col-md-4 pb-5 pb-md-0">
+      <div class="col-md-4 pb-5 pb-md-0 order-md-2 text-md-center">
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
-      <div class="col-md-4 text-md-end">
+      <div class="col-md-4 text-md-start order-md-1">
         <a href="ar">
           <img class="tagline-logo" src="assets/img/logo/logo-bts-ar-w.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
 
-      <div class="col-12 pt-5">
+      <div class="col-12 pt-5 order-md-4">
         <div class="d-flex align-items-center pb-2">
           <span class="text-white">تابعنا:</span>
           <ul class="list-unstyled d-flex social-navbar mb-0">
@@ -311,8 +313,8 @@
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
 <script src="assets/js/custom.js?v=2.102" charset="utf-8"></script>
 </body>
 </html>
